[gd_scene load_steps=14 format=4 uid="uid://hemj1divgt3y"]

[ext_resource type="PackedScene" uid="uid://c124a2irr2bng" path="res://scenes/3d/ui/PieTimerWorld.tscn" id="1_i8nuw"]
[ext_resource type="Script" uid="uid://dgunln4r8ojm4" path="res://scripts/3d/environment/houses/house_behavoiur.gd" id="2_8i5n2"]
[ext_resource type="PackedScene" uid="uid://ctdntkn4t6i6u" path="res://scenes/3d/environment/houses/graveyard.tscn" id="3_a3nin"]
[ext_resource type="PackedScene" uid="uid://dunld80hvsdff" path="res://scenes/3d/environment/houses/mill.tscn" id="3_dcxoh"]
[ext_resource type="PackedScene" uid="uid://d1uogtc04wq8a" path="res://scenes/3d/environment/houses/special_tree.tscn" id="4_a3nin"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_if7rs"]
resource_name = "house"
cull_mode = 2
albedo_color = Color(0.40520698, 0.2202688, 0.18086664, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_y6rwr"]
_surfaces = [{
"aabb": AABB(-6.5478706, -1.6999999, -6.5907173, 13.095741, 6.3711233, 13.181435),
"format": 34359742465,
"index_count": 72,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQABAACAAEAAAADAAUABAAFAAMAAAAFAAYAAQAAAAYABQAEAAcABAABAAcABQAIAAYAAQAGAAkACQAGAAgABQAKAAgACgAJAAgABQALAAoACgALAAkABQAHAAsAAQAJAAwACwAHAA0AAQANAAcADQAJAAsAAQAMAA0ADQAMAAkA"),
"name": "house",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 14,
"vertex_data": PackedByteArray("1BgOwJmZ2b98nslASAa4QJmZ2T9oj1lASAa4QJmZ2b9oj1lASAa4wJmZ2b9oj1nA1BgOQJmZ2b98nsnASAa4wJmZ2T9oj1nA1BgOwJmZ2T98nslA1BgOQJmZ2T98nsnAkhxBwJmZ2T8o59JAvfPhP9h5lUAYM5tAKIjRwJmZ2T8O/kbAvfPhv9h5lUAYM5vAKIjRQJmZ2T8O/kZAkhxBQJmZ2T8o59LA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_sqda5"]
resource_name = "mara_houses_Cube"
_surfaces = [{
"aabb": AABB(-6.5478706, -1.6999999, -6.5907173, 13.095741, 6.3711233, 13.181435),
"attribute_data": PackedByteArray("AADAPgAAAAAAACA/AACAPgAAwD4AAIA+AAAgPwAAAAAAACA/AAAAPgAAID8AAIA+AABgPwAAgD4AAGA/AACAPgAAwD4AAIA/AAAgPwAAQD8AACA/AACAPwAAwD4AAEA/AAAAPgAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AAMA+AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AACAPgAAwD4AAAA/AAAgPwAAQD8AAMA+AABAPwAAID8AAAA/AAAgPwAAID8AACA/AAAAPwAAYD8AAAA/AAAgPwAAgD4AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AAGA/AAAAPwAAYD8AAIA+AABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AAAgPwAAAD4AAGA/AACAPgAAID8AACA/AAAgPwAAAD8AACA/AAAAPgAAID8AACA/AAAgPwAAgD4="),
"format": 34359742487,
"index_count": 72,
"index_data": PackedByteArray("AAABAAIAAQAAAAMAAQADAAQAAQAEAAUABAAGAAcACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFQAUABcAFQAXABgAGAAXABkAFQAYABoAGwAcAB0AGwAeABwAHwAgACEAHwAiACAAIwAkACUAIwAmACQAJwAoACkAJwAqACgA"),
"material": SubResource("StandardMaterial3D_if7rs"),
"name": "house",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 43,
"vertex_data": PackedByteArray("1BgOwJmZ2b98nslASAa4QJmZ2T9oj1lASAa4QJmZ2b9oj1lA1BgOwJmZ2T98nslAvfPhP9h5lUAYM5tAKIjRQJmZ2T8O/kZA1BgOwJmZ2T98nslAkhxBwJmZ2T8o59JA1BgOwJmZ2b98nslASAa4wJmZ2T9oj1nA1BgOwJmZ2T98nslASAa4wJmZ2b9oj1nASAa4wJmZ2b9oj1nASAa4QJmZ2b9oj1lA1BgOQJmZ2b98nsnA1BgOwJmZ2b98nslA1BgOQJmZ2b98nsnASAa4QJmZ2T9oj1lA1BgOQJmZ2T98nsnASAa4QJmZ2b9oj1lA1BgOQJmZ2b98nsnASAa4wJmZ2T9oj1nASAa4wJmZ2b9oj1nA1BgOQJmZ2T98nsnAvfPhv9h5lUAYM5vAkhxBQJmZ2T8o59LAKIjRwJmZ2T8O/kbASAa4QJmZ2T9oj1lAkhxBQJmZ2T8o59LA1BgOQJmZ2T98nsnAKIjRQJmZ2T8O/kZASAa4wJmZ2T9oj1nAkhxBwJmZ2T8o59JA1BgOwJmZ2T98nslAKIjRwJmZ2T8O/kbAKIjRwJmZ2T8O/kbAvfPhP9h5lUAYM5tAkhxBwJmZ2T8o59JAvfPhv9h5lUAYM5vAkhxBQJmZ2T8o59LAvfPhP9h5lUAYM5tAvfPhv9h5lUAYM5vAKIjRQJmZ2T8O/kZAJqL/f/9///8mov9//3///yai/3//f///JqL/f/9///8mov9/////Pyai/3////8/JqL/f////z8mov9/////Pyci/3//f///JyL/f/9///8nIv9//3///yci/3//f////38AAP//E9H/fwAA//8T0f9/AAD//xPR/38AAP//E9H//yai/3//////JqL/f/////8mov9//////yai/3///wAA193/f///AADX3eMol8QAANfd/3///wAA193/f///AADX3U1BwKoAANfd////vwAA191NQcCq/38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v9ZXN8lsPIWr1lc3yaZQdq7WVzfJS2HhsNZXN8nMKOamxrbV1////7/GttXX////v8a21df///+/xrbV1////78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_y6rwr")

[sub_resource type="ArrayMesh" id="ArrayMesh_m540s"]
_surfaces = [{
"aabb": AABB(-2.4, -1.5, -4, 4.8, 5.6215796, 8),
"format": 34359742465,
"index_count": 72,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQABAACAAEAAAADAAUABAAFAAMAAAAFAAYAAQAAAAYABQAEAAcABAABAAcABQAIAAYAAQAGAAkACQAGAAgABQAKAAgACgAJAAgABQALAAoACgALAAkABQAHAAsAAQAJAAwACwAHAA0AAQANAAcADQAJAAsAAQAMAA0ADQAMAAkA"),
"name": "house",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 14,
"vertex_data": PackedByteArray("AAAAwAAAwL8AAIBAAAAAQAAAwD8AAIBAAAAAQAAAwL8AAIBAAAAAwAAAwL8AAIDAAAAAQAAAwL8AAIDAAAAAwAAAwD8AAIDAAAAAwAAAwD8AAIBAAAAAQAAAwD8AAIDAmpkZwAAAwD8AAIBAAAAAAPvjg0AAAIBAmpkZwAAAwD8AAIDAAAAAAPvjg0AAAIDAmpkZQAAAwD8AAIBAmpkZQAAAwD8AAIDA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ygpgo"]
resource_name = "mara_houses_Cube_002"
_surfaces = [{
"aabb": AABB(-2.4, -1.5, -4, 4.8, 5.6215796, 8),
"attribute_data": PackedByteArray("AADAPgAAAAAAACA/AACAPgAAwD4AAIA+AAAgPwAAAAAAACA/AAAAPgAAID8AAIA+AABgPwAAgD4AAGA/AACAPgAAwD4AAIA/AAAgPwAAQD8AACA/AACAPwAAwD4AAEA/AAAAPgAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AAMA+AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AACAPgAAwD4AAAA/AAAgPwAAQD8AAMA+AABAPwAAID8AAAA/AAAgPwAAID8AACA/AAAAPwAAYD8AAAA/AAAgPwAAgD4AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AAGA/AAAAPwAAYD8AAIA+AABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AAAgPwAAAD4AAGA/AACAPgAAID8AACA/AAAgPwAAAD8AACA/AAAAPgAAID8AACA/AAAgPwAAgD4="),
"format": 34359742487,
"index_count": 72,
"index_data": PackedByteArray("AAABAAIAAQAAAAMAAQADAAQAAQAEAAUABAAGAAcACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFQAUABcAFQAXABgAGAAXABkAFQAYABoAGwAcAB0AGwAeABwAHwAgACEAHwAiACAAIwAkACUAIwAmACQAJwAoACkAJwAqACgA"),
"material": SubResource("StandardMaterial3D_if7rs"),
"name": "house",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 43,
"vertex_data": PackedByteArray("AAAAwAAAwL8AAIBAAAAAQAAAwD8AAIBAAAAAQAAAwL8AAIBAAAAAwAAAwD8AAIBAAAAAAPvjg0AAAIBAmpkZQAAAwD8AAIBAAAAAwAAAwD8AAIBAmpkZwAAAwD8AAIBAAAAAwAAAwL8AAIBAAAAAwAAAwD8AAIDAAAAAwAAAwD8AAIBAAAAAwAAAwL8AAIDAAAAAwAAAwL8AAIDAAAAAQAAAwL8AAIBAAAAAQAAAwL8AAIDAAAAAwAAAwL8AAIBAAAAAQAAAwL8AAIDAAAAAQAAAwD8AAIBAAAAAQAAAwD8AAIDAAAAAQAAAwL8AAIBAAAAAQAAAwL8AAIDAAAAAwAAAwD8AAIDAAAAAwAAAwL8AAIDAAAAAQAAAwD8AAIDAAAAAAPvjg0AAAIDAmpkZQAAAwD8AAIDAmpkZwAAAwD8AAIDAAAAAQAAAwD8AAIBAmpkZQAAAwD8AAIDAAAAAQAAAwD8AAIDAmpkZQAAAwD8AAIBAAAAAwAAAwD8AAIDAmpkZwAAAwD8AAIBAAAAAwAAAwD8AAIBAmpkZwAAAwD8AAIDAmpkZwAAAwD8AAIDAAAAAAPvjg0AAAIBAmpkZwAAAwD8AAIBAAAAAAPvjg0AAAIDAmpkZQAAAwD8AAIDAAAAAAPvjg0AAAIBAAAAAAPvjg0AAAIDAmpkZQAAAwD8AAIBA/3//f/9/////f/9//3////9//3//f////3//f/9/////f/9/////P/9//3////8//3//f////z//f/9/////PwAA/3//f///AAD/f/9///8AAP9//3///wAA/3//f////38AAP///7//fwAA////v/9/AAD///+//38AAP///7////9//3///////3//f///////f/9///////9//3//////////f////////8wKmLr//////3//////////f////////5hFM53/////////v/////+YRTOd/38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////vyw9K72kOtaaLD0rvadUUqgsPSu98l1mrSw9K73KL9+V0sIrvf///7/Swiu9////v9LCK73///+/0sIrvf///78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_m540s")

[sub_resource type="SphereShape3D" id="SphereShape3D_i8nuw"]
radius = 7.642

[sub_resource type="ArrayMesh" id="ArrayMesh_p0368"]
_surfaces = [{
"aabb": AABB(-2.4, -2, -2, 4.8, 7.4954395, 4),
"format": 34359742465,
"index_count": 72,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQABAACAAEAAAADAAUABAAFAAMAAAAFAAYAAQAAAAYABQAEAAcABAABAAcABQAIAAYAAQAGAAkACQAGAAgABQAKAAgACgAJAAgABQALAAoACgALAAkABQAHAAsAAQAJAAwACwAHAA0AAQANAAcADQAJAAsAAQAMAA0ADQAMAAkA"),
"name": "house",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 14,
"vertex_data": PackedByteArray("AAAAwAAAAMAAAABAAAAAQAAAAEAAAABAAAAAQAAAAMAAAABAAAAAwAAAAMAAAADAAAAAQAAAAMAAAADAAAAAwAAAAEAAAADAAAAAwAAAAEAAAABAAAAAQAAAAEAAAADAmpkZwAAAAEAAAABAAAAAAKTar0AAAABAmpkZwAAAAEAAAADAAAAAAKTar0AAAADAmpkZQAAAAEAAAABAmpkZQAAAAEAAAADA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_76m3h"]
resource_name = "mara_houses_Cube_003"
_surfaces = [{
"aabb": AABB(-2.4, -2, -2, 4.8, 7.4954395, 4),
"attribute_data": PackedByteArray("AADAPgAAAAAAACA/AACAPgAAwD4AAIA+AAAgPwAAAAAAACA/AAAAPgAAID8AAIA+AABgPwAAgD4AAGA/AACAPgAAwD4AAIA/AAAgPwAAQD8AACA/AACAPwAAwD4AAEA/AAAAPgAAAD8AAMA+AACAPgAAwD4AAAA/AAAAPgAAgD4AAMA+AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AACAPgAAwD4AAAA/AAAgPwAAQD8AAMA+AABAPwAAID8AAAA/AAAgPwAAID8AACA/AAAAPwAAYD8AAAA/AAAgPwAAgD4AACA/AAAAPwAAID8AAAA/AAAgPwAAgD4AAGA/AAAAPwAAYD8AAIA+AABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AAAgPwAAAD4AAGA/AACAPgAAID8AACA/AAAgPwAAAD8AACA/AAAAPgAAID8AACA/AAAgPwAAgD4="),
"format": 34359742487,
"index_count": 72,
"index_data": PackedByteArray("AAABAAIAAQAAAAMAAQADAAQAAQAEAAUABAAGAAcACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFQAUABcAFQAXABgAGAAXABkAFQAYABoAGwAcAB0AGwAeABwAHwAgACEAHwAiACAAIwAkACUAIwAmACQAJwAoACkAJwAqACgA"),
"material": SubResource("StandardMaterial3D_if7rs"),
"name": "house",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 43,
"vertex_data": PackedByteArray("AAAAwAAAAMAAAABAAAAAQAAAAEAAAABAAAAAQAAAAMAAAABAAAAAwAAAAEAAAABAAAAAAKTar0AAAABAmpkZQAAAAEAAAABAAAAAwAAAAEAAAABAmpkZwAAAAEAAAABAAAAAwAAAAMAAAABAAAAAwAAAAEAAAADAAAAAwAAAAEAAAABAAAAAwAAAAMAAAADAAAAAwAAAAMAAAADAAAAAQAAAAMAAAABAAAAAQAAAAMAAAADAAAAAwAAAAMAAAABAAAAAQAAAAMAAAADAAAAAQAAAAEAAAABAAAAAQAAAAEAAAADAAAAAQAAAAMAAAABAAAAAQAAAAMAAAADAAAAAwAAAAEAAAADAAAAAwAAAAMAAAADAAAAAQAAAAEAAAADAAAAAAKTar0AAAADAmpkZQAAAAEAAAADAmpkZwAAAAEAAAADAAAAAQAAAAEAAAABAmpkZQAAAAEAAAADAAAAAQAAAAEAAAADAmpkZQAAAAEAAAABAAAAAwAAAAEAAAADAmpkZwAAAAEAAAABAAAAAwAAAAEAAAABAmpkZwAAAAEAAAADAmpkZwAAAAEAAAADAAAAAAKTar0AAAABAmpkZwAAAAEAAAABAAAAAAKTar0AAAADAmpkZQAAAAEAAAADAAAAAAKTar0AAAABAAAAAAKTar0AAAADAmpkZQAAAAEAAAABA/3//f/9/////f/9//3////9//3//f////3//f/9/////f/9/////P/9//3////8//3//f////z//f/9/////PwAA/3//f///AAD/f/9///8AAP9//3///wAA/3//f////38AAP///7//fwAA////v/9/AAD///+//38AAP///7////9//3///////3//f///////f/9///////9//3//////////f////////1wTUbb//////3//////////f////////45OuJj/////////v/////+OTriY/38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////vxo0GrT4TwWdGjQatB9PZ5waNBq0F1mpoxo0GrTiQEWW5MsatP///7/kyxq0////v+TLGrT///+/5MsatP///78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_p0368")

[node name="mara_houses" type="Node3D"]

[node name="big-home-rotated" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_sqda5")
skeleton = NodePath("")

[node name="PieTimerWorld" parent="big-home-rotated" instance=ExtResource("1_i8nuw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.165, 0)

[node name="small-home" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.097, 0, 0)
mesh = SubResource("ArrayMesh_ygpgo")
skeleton = NodePath("")
script = ExtResource("2_8i5n2")

[node name="PieTimerWorld" parent="small-home" instance=ExtResource("1_i8nuw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.846843, 0)

[node name="Area3D" type="Area3D" parent="small-home"]
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="small-home/Area3D"]
shape = SubResource("SphereShape3D_i8nuw")

[node name="bigger home" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 9.197)
mesh = SubResource("ArrayMesh_76m3h")
skeleton = NodePath("")

[node name="PieTimerWorld" parent="bigger home" instance=ExtResource("1_i8nuw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.4397573, 0)

[node name="graveyard" parent="." instance=ExtResource("3_a3nin")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30)

[node name="mill" parent="." instance=ExtResource("3_dcxoh")]
transform = Transform3D(1, 0, 0, 0, 0.67, 0, 0, 0, 1, 16, 4.6820416, 9.197)

[node name="tree" parent="." instance=ExtResource("4_a3nin")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)

[connection signal="body_entered" from="small-home/Area3D" to="small-home" method="_on_area_3d_body_entered"]
